# pme_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  BACKEND_STARTUP_GUIDE.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CHART_AND_IRR_FIXES_SUMMARY.md  CHART_IMPLEMENTATION_STATUS.md  CI_COVERAGE_UPDATE_SUMMARY.md  COMPREHENSIVE_BUG_FIXES_REPORT.md  COMPREHENSIVE_CLEANUP_REPORT.md  DATA_PROBLEM_RESOLUTION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKERFILE_UPDATE_SUMMARY.md  Dockerfile  GITHUB_ACTIONS_FIXES.md  IMPLEMENTATION_PROGRESS.md  KILL_PORT_8000_IMPROVEMENTS.md  L6_PERFORMANCE_OPTIMIZATION_PLAN.md  L6_PERFORMANCE_OPTIMIZATION_RESULTS 2.md  LOADING_ISSUE_RESOLUTION.md  PHASE2_COMPLETION_REPORT.md  README.md  REFACTORING_SUMMARY.md  SAFE_WORKFLOW_GUIDE.md  SERIALIZATION_IMPLEMENTATION_SUMMARY.md  SPRINT1_COMPLETION_REPORT.md  SPRINT2_COMPLETION_REPORT.md  UPLOAD_BUG_FIX_FINAL_SUMMARY.md  UPLOAD_BUG_FIX_SUMMARY.md  analysis_profile.prof  apply_upload_fix.sh  check_localhost.py  cleanup_frontend.sh  conftest.py  coverage.xml  debug_ci.py  docker-compose.yml  (+49 more)
.cursor/: mcp.json
.cursor/rules/: projectrule.mdc
.github/workflows/: README.md  ci.yml
assets/: create_logo.py
pme_app/: __main__.py  benchmark_library.py  cashflow_overview_chart.py  cli.py  data_manager.py  duration.py  logger.py  main.py  nav_waterfall.py  performance_metrics_chart.py  pme_calcs.py  pme_logic.py  pme_plot.py  style.py  utils.py
pme_app/reporting/: pdf.py  xlsx.py
pme_app/routers/: portfolio.py
pme_app/services/: __init__.py  analysis.py  portfolio.py
pme_app/utils/: __init__.py  responses.py  serialization.py
pme_calculator/: DISTRIBUTION.md  MIGRATION_STATUS.md  README.md  __init__.py  build.py  config.py  fix_deps.py
pme_calculator/alembic/: env.py
pme_calculator/alembic/versions/: 001_create_upload_files_table.py
pme_calculator/backend/: ENHANCEMENT_REPORT.md  __init__.py  analysis_engine.py  analysis_engine_legacy.py  api_bridge.py  cache.py  cache_integration_example.py  chart_engine.py  config.py  data_processor.py  database.py  db_views.py  health_check.py  logger.py  main.py  main_minimal.py  math_engine.py  minimal_server.py  models.py  pme_cache.duckdb  pme_cache.duckdb.wal  pme_calculator.spec  pme_engine.py  pme_test.duckdb  pme_test.duckdb.wal  portfolio_service.py  pyproject.toml  pytest.ini  reporting.py  requirements.txt  schemas.py  simple_analysis.py  simple_test.py  test_charts.py  test_enhanced_system.py  test_index.csv  test_integration.py  test_irr.py  test_port_handling_simple.py  test_refactoring.py  (+3 more)
pme_calculator/backend/analytics/: __init__.py  service.py
pme_calculator/backend/models/: __init__.py  upload_meta.py
pme_calculator/backend/pme_math/: __init__.py  metrics.py
pme_calculator/backend/routers/: __init__.py  analysis.py  health.py  metrics.py  upload.py
pme_calculator/backend/routes/: analysis.py  portfolio.py  validation.py
pme_calculator/backend/tests/: conftest.py  test_bug_fixes.py  test_cache.py  test_metrics.py  test_safe_workflow.py
pme_calculator/backend/utils/: __init__.py  time.py
pme_calculator/backend/validation/: __init__.py  file_check.py  file_check_simple.py  schemas.py  schemas_simple.py
pme_calculator/backend/worker/: __init__.py  celery_app.py  tasks.py
pme_calculator/frontend/: TESTING_ROADMAP.md  _dashboard.css  analysis.html  analysis.js  app.js  components.json  debug_checklist.js  index.html  package-lock 2.json  package-lock.json  package.json  pe_fund_clear_columns.csv  realistic_pe_fund_10yr.csv  sp500_index_10yr.csv  style.css  tailwind.config.js  tailwind.config.ts  test_charts.html  test_data_with_issues.csv  vite.config.ts  vitest.config.ts
pme_calculator/frontend/coverage/: clover.xml  coverage-final.json  index.html
pme_calculator/frontend/coverage/frontend/: analysis.js.html  app.js.html  debug_checklist.js.html  index.html  postcss.config.js.html  tailwind.config.js.html  tailwind.config.ts.html
pme_calculator/frontend/public/: index.html
pme_calculator/frontend/src/: App.tsx  index.css  theme.ts  vite-env.d.ts
pme_calculator/frontend/src/components/: AdvancedPMEDashboard.tsx  AnalysisDashboard.tsx  AnalyticsDashboard.tsx  CashFlowAnalysis.tsx  CashFlowClassificationDialog.tsx  CashOnCashAnalysis.tsx  ChartsDashboard.tsx  CommandModal.tsx  DarkModeToggle.tsx  DashboardShell.tsx  EnhancedDataUpload.tsx  EnhancedFileUpload.tsx  EnhancedNeonDashboard.tsx  ErrorBoundary.tsx  IntelligentDataUpload.tsx  InteractiveFilters.tsx  MetricCard.tsx  Navbar.tsx  NeonDashboard.tsx  NotificationSystem.tsx  PMECharts.tsx  PlotlyChart.tsx  PortfolioMetrics.tsx  ProfessionalErrorStates.tsx  SimpleEnhancedDashboard.tsx  TestingPanel.tsx
pme_calculator/frontend/src/config/: api.ts
pme_calculator/frontend/src/contexts/: ColorModeContext.tsx
pme_calculator/frontend/src/layout/: Header.tsx  Sidebar.tsx
pme_calculator/frontend/src/pages/: Analysis.tsx  ChartsTest.tsx  DataUpload.tsx
pme_calculator/frontend/src/services/: analysisService.ts  api.ts  fileStore.ts  healthCheck.ts
pme_calculator/pme_app/: benchmark_library.py  cashflow_overview_chart.py  duration.py  nav_waterfall.py  performance_metrics_chart.py  pme_calcs.py  pme_logic.py  pme_plot.py  style.py  utils.py
pme_calculator/utils/: __init__.py  time.py
pme_math/: __init__.py  alignment_engine.py  error_envelope.py  simple_alignment.py
pwe_calculator/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
pwe_calculator/frontend/src/: App.tsx  main.tsx
reports/: Portfolio_Report_2025-06-13_16-27.xlsx  Portfolio_Report_2025-06-13_16-33.xlsx
requirements/: base.in  base.txt  dev.in  dev.txt
sample_funds/: balanced_fund.csv  growth_fund.csv  value_fund.csv
scripts/: build_report.py  run_all_checks 2.sh
src/components/: AnalysisDashboard.tsx
tests/: test_cache_basic.py  test_cache_mock.py  test_phase1_alignment.py  test_pme_app_basic.py  test_predictive_warm.py  test_serialization.py  test_smoke.py
tests/services/: test_analysis.py  test_portfolio.py
(+101 files in other folders)
