[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# Start with services only, then expand
files = ["pme_app/services"]

# Strict settings
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Allow some flexibility for gradual adoption
allow_redefinition = true
implicit_reexport = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]
fixable = ["ALL"]
